// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createGroupEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "UserGroup",
  ],
  "_key": "google_group_0184mhaj0imamcg",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "adminCreated": true,
        "aliases": Array [
          "randomdistro@jupiterone.com",
        ],
        "description": "randomdistro@jupiterone.io distribution list",
        "directMembersCount": "5",
        "email": "randomdistro@jupiterone.io",
        "etag": "abc123",
        "id": "0184mhaj0imamcg",
        "kind": "admin#directory#group",
        "name": "Random",
        "nonEditableAliases": Array [
          "randomdistro@jupiterone.io.test-google-a.com",
        ],
      },
    },
  ],
  "_type": "google_group",
  "adminCreated": true,
  "createdOn": undefined,
  "description": "randomdistro@jupiterone.io distribution list",
  "directMembersCount": "5",
  "displayName": "Random",
  "email": "randomdistro@jupiterone.io",
  "id": "0184mhaj0imamcg",
  "kind": "admin#directory#group",
  "name": "Random",
}
`;

exports[`#createGroupHasGroupMappedRelationship should convert to mapped relationship 1`] = `
Object {
  "_class": "HAS",
  "_key": "google_group_0184mhaj0imamcg_has_group_abc123email@jupiterone.com",
  "_mapping": Object {
    "relationshipDirection": "FORWARD",
    "skipTargetCreation": false,
    "sourceEntityKey": "google_group_0184mhaj0imamcg",
    "targetEntity": Object {
      "_type": "google_group",
      "displayName": "abc123email@jupiterone.com",
      "email": "abc123email@jupiterone.com",
      "name": "abc123email@jupiterone.com",
    },
    "targetFilterKeys": Array [
      Array [
        "_type",
        "email",
      ],
    ],
  },
  "_type": "google_group_has_user",
  "displayName": "HAS",
  "email": "abc123email@jupiterone.com",
  "id": "abc123",
  "kind": "admin#directory#member",
  "role": "MEMBER",
  "status": "ACTIVE",
  "type": "GROUP",
}
`;

exports[`#createGroupHasGroupRelationship should convert to relationship 1`] = `
Object {
  "_class": "HAS",
  "_fromEntityKey": "google_group_0184mhaj0imamcg",
  "_key": "google_group_0184mhaj0imamcg|has|google_group_999",
  "_toEntityKey": "google_group_999",
  "_type": "google_group_has_group",
  "deliverySettings": undefined,
  "displayName": "HAS",
  "email": "abc123email@jupiterone.com",
  "id": "abc123",
  "kind": "admin#directory#member",
  "role": "MEMBER",
  "status": "ACTIVE",
  "type": "GROUP",
}
`;

exports[`#createGroupHasUserMappedRelationship should convert to mapped relationship 1`] = `
Object {
  "_class": "HAS",
  "_key": "google_group_0184mhaj0imamcg_has_user_abc123email@jupiterone.com",
  "_mapping": Object {
    "relationshipDirection": "FORWARD",
    "skipTargetCreation": false,
    "sourceEntityKey": "google_group_0184mhaj0imamcg",
    "targetEntity": Object {
      "_type": "google_user",
      "displayName": "abc123email@jupiterone.com",
      "email": "abc123email@jupiterone.com",
      "name": "abc123email@jupiterone.com",
    },
    "targetFilterKeys": Array [
      Array [
        "_type",
        "email",
      ],
    ],
  },
  "_type": "google_group_has_user",
  "displayName": "HAS",
  "email": "abc123email@jupiterone.com",
  "id": "1234567890",
  "kind": "admin#directory#member",
  "role": "MEMBER",
  "status": "ACTIVE",
  "type": "USER",
}
`;

exports[`#createGroupHasUserRelationship should convert to relationship 1`] = `
Object {
  "_class": "HAS",
  "_fromEntityKey": "google_group_0184mhaj0imamcg",
  "_key": "google_group_0184mhaj0imamcg|has|google_user_123456789",
  "_toEntityKey": "google_user_123456789",
  "_type": "google_group_has_user",
  "deliverySettings": undefined,
  "displayName": "HAS",
  "email": "abc123email@jupiterone.com",
  "id": "abc123",
  "kind": "admin#directory#member",
  "role": "MEMBER",
  "status": "ACTIVE",
  "type": "GROUP",
}
`;

exports[`#createGroupSettingsEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Configuration",
  ],
  "_key": "google_group_settings_0184mhaj0imamcg",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "allowExternalMembers": "false",
        "allowGoogleCommunication": "false",
        "allowWebPosting": "true",
        "archiveOnly": "false",
        "customFooterText": "",
        "customReplyTo": "",
        "customRolesEnabledForSettingsToBeMerged": "false",
        "defaultMessageDenyNotificationText": "",
        "description": "",
        "email": "homeschool@thewilliams.ws",
        "enableCollaborativeInbox": "false",
        "favoriteRepliesOnTop": "true",
        "includeCustomFooter": "false",
        "includeInGlobalAddressList": "true",
        "isArchived": "false",
        "kind": "groupsSettings#groups",
        "maxMessageBytes": 26214400,
        "membersCanPostAsTheGroup": "false",
        "messageDisplayFont": "DEFAULT_FONT",
        "messageModerationLevel": "MODERATE_NONE",
        "name": "homeschool",
        "replyTo": "REPLY_TO_IGNORE",
        "sendMessageDenyNotification": "false",
        "showInGroupDirectory": "false",
        "spamModerationLevel": "MODERATE",
        "whoCanAdd": "ALL_MANAGERS_CAN_ADD",
        "whoCanAddReferences": "NONE",
        "whoCanApproveMembers": "ALL_MANAGERS_CAN_APPROVE",
        "whoCanApproveMessages": "OWNERS_AND_MANAGERS",
        "whoCanAssignTopics": "NONE",
        "whoCanAssistContent": "NONE",
        "whoCanBanUsers": "OWNERS_AND_MANAGERS",
        "whoCanContactOwner": "ANYONE_CAN_CONTACT",
        "whoCanDeleteAnyPost": "OWNERS_AND_MANAGERS",
        "whoCanDeleteTopics": "OWNERS_AND_MANAGERS",
        "whoCanDiscoverGroup": "ALL_MEMBERS_CAN_DISCOVER",
        "whoCanEnterFreeFormTags": "NONE",
        "whoCanHideAbuse": "NONE",
        "whoCanInvite": "ALL_MANAGERS_CAN_INVITE",
        "whoCanJoin": "CAN_REQUEST_TO_JOIN",
        "whoCanLeaveGroup": "ALL_MEMBERS_CAN_LEAVE",
        "whoCanLockTopics": "OWNERS_AND_MANAGERS",
        "whoCanMakeTopicsSticky": "NONE",
        "whoCanMarkDuplicate": "NONE",
        "whoCanMarkFavoriteReplyOnAnyTopic": "NONE",
        "whoCanMarkFavoriteReplyOnOwnTopic": "NONE",
        "whoCanMarkNoResponseNeeded": "NONE",
        "whoCanModerateContent": "OWNERS_AND_MANAGERS",
        "whoCanModerateMembers": "OWNERS_AND_MANAGERS",
        "whoCanModifyMembers": "OWNERS_AND_MANAGERS",
        "whoCanModifyTagsAndCategories": "NONE",
        "whoCanMoveTopicsIn": "OWNERS_AND_MANAGERS",
        "whoCanMoveTopicsOut": "OWNERS_AND_MANAGERS",
        "whoCanPostAnnouncements": "OWNERS_AND_MANAGERS",
        "whoCanPostMessage": "ANYONE_CAN_POST",
        "whoCanTakeTopics": "NONE",
        "whoCanUnassignTopic": "NONE",
        "whoCanUnmarkFavoriteReplyOnAnyTopic": "NONE",
        "whoCanViewGroup": "ALL_MEMBERS_CAN_VIEW",
        "whoCanViewMembership": "ALL_MANAGERS_CAN_VIEW",
      },
    },
  ],
  "_type": "google_group_settings",
  "allowExternalMembers": false,
  "allowWebPosting": true,
  "archiveOnly": false,
  "createdOn": undefined,
  "customFooterText": "",
  "customReplyTo": "",
  "customRolesEnabledForSettingsToBeMerged": false,
  "defaultMessageDenyNotificationText": "",
  "description": "",
  "displayName": "randomdistro@jupiterone.io",
  "email": "homeschool@thewilliams.ws",
  "enableCollaborativeInbox": false,
  "favoriteRepliesOnTop": true,
  "id": "0184mhaj0imamcg",
  "includeCustomFooter": false,
  "includeInGlobalAddressList": true,
  "isArchived": false,
  "membersCanPostAsTheGroup": false,
  "messageModerationLevel": "MODERATE_NONE",
  "name": "randomdistro@jupiterone.io",
  "primaryLanguage": undefined,
  "replyTo": "REPLY_TO_IGNORE",
  "sendMessageDenyNotification": false,
  "spamModerationLevel": "MODERATE",
  "webLink": "https://admin.google.com/ac/groups/0184mhaj0imamcg/settings",
  "whoCanApproveMembers": "ALL_MANAGERS_CAN_APPROVE",
  "whoCanAssistContent": "NONE",
  "whoCanBanUsers": "OWNERS_AND_MANAGERS",
  "whoCanContactOwner": "ANYONE_CAN_CONTACT",
  "whoCanDiscoverGroup": "ALL_MEMBERS_CAN_DISCOVER",
  "whoCanJoin": "CAN_REQUEST_TO_JOIN",
  "whoCanLeaveGroup": "ALL_MEMBERS_CAN_LEAVE",
  "whoCanModerateContent": "OWNERS_AND_MANAGERS",
  "whoCanModerateMembers": "OWNERS_AND_MANAGERS",
  "whoCanPostMessage": "ANYONE_CAN_POST",
  "whoCanViewGroup": "ALL_MEMBERS_CAN_VIEW",
  "whoCanViewMembership": "ALL_MANAGERS_CAN_VIEW",
}
`;
